# dqa_git

./: .gitignore  .pre-commit-config.yaml  Makefile  azure-pipelines.yml  main.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  add_requirements_to_uv.sh  devcontainer.json  gadd  loader_script.sh  local_servers.md  requirements.txt  setup_enhanced_git.sh
docs/: ENHANCED_GIT_WORKFLOW.md  README.md
src/: MetadataBroadcastManager.py  Utilities.py
tests/: base_test.py  conftest.py  test_BronzeValidation.py  test_GoldTruncatedValidation.py  test_GoldValidation.py  test_LegacyDataLoad.py  test_SQL_Datasource.py  test_SilverValidation.py
